update media setting

--- a/layout.html
+++ b/layout.html
@@ -6,10 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/layout.css" />
+    <script src="https://kit.fontawesome.com/03dc0cd36e.js"></script>
     <title>FzTable</title>
   </head>
   <body>
     <div class="wrapper">
+      <div class="slide-btn slide-left">
+        <i class="fas fa-angle-left"></i>
+      </div>
+      <div class="slide-btn slide-right">
+        <i class="fas fa-angle-right"></i>
+      </div>
       <div class="left-table">
         <div class="title left-col">
           <span>去程</span>
