modify media setting for slider

--- a/layout.html
+++ b/layout.html
@@ -11,10 +11,16 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="slide-btn slide-left">
+      <!-- <div class="slide-btn slide-left">
         <i class="fas fa-angle-left"></i>
       </div>
       <div class="slide-btn slide-right">
+        <i class="fas fa-angle-right"></i>
+      </div> -->
+      <div style="display: none" class="slide-btn slide-left">
+        <i class="fas fa-angle-left"></i>
+      </div>
+      <div style="display: none" class="slide-btn slide-right">
         <i class="fas fa-angle-right"></i>
       </div>
       <div class="left-table">
@@ -33,9 +39,9 @@
       <div class="right-table">
         <div class="right-col">
           <div class="right-col-data day">12/27(一)</div>
-          <div class="right-col-data click-hightlight-neighbor">price</div>
-          <div class="right-col-data cheapest click-hightlight">price</div>
-          <div class="right-col-data click-hightlight-neighbor">price</div>
+          <div class="right-col-data">price</div>
+          <div class="right-col-data cheapest">price</div>
+          <div class="right-col-data">price</div>
           <div class="right-col-data">price</div>
           <div class="right-col-data">price</div>
           <div class="right-col-data ">price</div>
@@ -96,9 +102,22 @@
           <div class="right-col-data last-col-right-border">price</div>
           <div class="right-col-data last-col-right-border">price</div>
           <div class="right-col-data last-col-right-border">price</div>
-          <div class="right-col-data last-col-right-border">price</div>
-          <div class="right-col-data last-col-right-border">price</div>
-          <div class="right-col-data last-col-right-border">price</div>
+          <div
+            class="right-col-data last-col-right-border click-hightlight-neighbor
+          "
+          >
+            price
+          </div>
+          <div
+            class="right-col-data last-col-right-border cheapest click-hightlight"
+          >
+            price
+          </div>
+          <div
+            class="right-col-data last-col-right-border click-hightlight-neighbor"
+          >
+            price
+          </div>
           <div class="right-col-data last-col-right-border">price</div>
         </div>
       </div>
