--- a/layout.html
+++ b/layout.html
@@ -24,11 +24,11 @@
         <i class="fas fa-angle-right"></i>
       </div>
       <div class="left-table">
-        <div class="title left-col">
+        <div class="title left-col last-col-right-border">
           <span>去程</span>
           <span>回程</span>
         </div>
-        <div class="left-col">12/27(一)</div>
+        <div class="left-col ">12/27(一)</div>
         <div class="left-col">12/27(二)</div>
         <div class="left-col">day3</div>
         <div class="left-col">day4</div>
@@ -97,28 +97,24 @@
           <div class="right-col-data">price</div>
           <div class="right-col-data">price</div>
         </div>
-        <div class="right-col">
+        <div class="right-col last-col-right-border">
           <div class="right-col-data day">day7</div>
-          <div class="right-col-data last-col-right-border">price</div>
-          <div class="right-col-data last-col-right-border">price</div>
-          <div class="right-col-data last-col-right-border">price</div>
+          <div class="right-col-data">price</div>
+          <div class="right-col-data">price</div>
+          <div class="right-col-data">price</div>
           <div
-            class="right-col-data last-col-right-border click-hightlight-neighbor
+            class="right-col-data click-hightlight-neighbor
           "
           >
             price
           </div>
-          <div
-            class="right-col-data last-col-right-border cheapest click-hightlight"
-          >
+          <div class="right-col-data cheapest click-hightlight">
             price
           </div>
-          <div
-            class="right-col-data last-col-right-border click-hightlight-neighbor"
-          >
+          <div class="right-col-data click-hightlight-neighbor">
             price
           </div>
-          <div class="right-col-data last-col-right-border">price</div>
+          <div class="right-col-data">price</div>
         </div>
       </div>
     </div>
